<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_support"
        android:title="@string/pref_support_title"
        android:summary="@string/pref_support_summary">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://forum.xda-developers.com/showthread.php?t=2705007" />
    </Preference>

    <Preference
        android:title="@string/pref_xposed_title"
        android:summary="@string/pref_xposed_summary">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://forum.xda-developers.com/showthread.php?t=1574401" />
    </Preference>

    <CheckBoxPreference
        android:key="pref_hide_all"
        android:title="@string/pref_hide_all_title"
        android:summary="@string/pref_hide_all_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_show_app_icon"
        android:title="@string/pref_show_app_icon_title"
        android:defaultValue="true" />

</PreferenceScreen>